Updated classifier run(s) with reduced-dimensionality data

--- a/RandomForest.ipynb
+++ b/RandomForest.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 264,
    "metadata": {
     "scrolled": true
    },
@@ -53,10 +53,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "random forest 0.9411764705882353\n",
-      "knn 0.9327731092436975\n",
-      "svc 0.7647058823529411\n",
-      "logistic regression 0.8823529411764706\n"
+      "random forest 0.9271356783919598\n",
+      "knn 0.9095477386934674\n",
+      "svc(linear) 0.9221105527638191\n",
+      "svc(rbf) 0.5678391959798995\n",
+      "logistic regression 0.9045226130653267\n"
      ]
     }
    ],
@@ -74,20 +75,25 @@
     "## RandomForest Classifier with monte carlo simulated training set\n",
     "np.random.seed(1234)\n",
     "\n",
-    "df = pd.read_csv(\"data.csv\")\n",
-    "df = df.drop([\"id\",\"Unnamed: 32\"],axis=1)\n",
+    "#df = pd.read_csv(\"mc_test_data.csv\")\n",
+    "df = pd.read_csv(\"rndf_filt_data.csv\")\n",
+    "#print(df.head())\n",
+    "#df = df.drop([\"id\",\"Unnamed: 32\"],axis=1)\n",
+    "df = df.drop([\"Unnamed: 0\"],axis=1)\n",
     "df = df.replace({'diagnosis': \"M\"}, 1)\n",
     "df = df.replace({'diagnosis': \"B\"}, 0)\n",
     "\n",
     "#split dataset for mc seed and testing\n",
     "\n",
-    "df_mc, df = numpy.split(df, [int(.7*len(df))])\n",
+    "#df_mc, df = numpy.split(df, [int(.7*len(df))])\n",
     "\n",
     "#split dataset by class\n",
-    "df_1 = df_mc.loc[df_mc.diagnosis==1]\n",
-    "df_0 = df_mc.loc[df_mc.diagnosis==0]\n",
-    "df_1 = df_1.drop([\"diagnosis\"],axis=1)\n",
-    "df_0 = df_0.drop([\"diagnosis\"],axis=1)\n",
+    "df_1 = pd.read_csv(\"mc_data_M.csv\").drop([\"Unnamed: 0\"],axis=1)\n",
+    "df_0 = pd.read_csv(\"mc_data_B.csv\").drop([\"Unnamed: 0\"],axis=1)\n",
+    "#df_1 = df_mc.loc[df_mc.diagnosis==1]\n",
+    "#df_0 = df_mc.loc[df_mc.diagnosis==0]\n",
+    "#df_1 = df_1.drop([\"diagnosis\"],axis=1)\n",
+    "#df_0 = df_0.drop([\"diagnosis\"],axis=1)\n",
     "\n",
     "#simulate class 0 data\n",
     "mc_sim_df_0 = pd.DataFrame()\n",
@@ -155,14 +161,24 @@
     "print(\"knn\", hit/len(pd))\n",
     "\n",
     "#svc\n",
-    "model = svc()\n",
+    "model = svc(kernel=\"linear\")\n",
     "model = model.fit(dfTrn.values,DTrn)\n",
     "pd = model.predict(dfDev)\n",
     "hit = 0\n",
     "for i in range(len(pd)):\n",
     "    if(int(pd[i])==int(DDev.iloc[i])):\n",
     "        hit+=1\n",
-    "print(\"svc\", hit/len(pd))\n",
+    "print(\"svc(linear)\", hit/len(pd))\n",
+    "\n",
+    "#svc\n",
+    "model = svc(kernel=\"rbf\")\n",
+    "model = model.fit(dfTrn.values,DTrn)\n",
+    "pd = model.predict(dfDev)\n",
+    "hit = 0\n",
+    "for i in range(len(pd)):\n",
+    "    if(int(pd[i])==int(DDev.iloc[i])):\n",
+    "        hit+=1\n",
+    "print(\"svc(rbf)\", hit/len(pd))\n",
     "\n",
     "#logistic regression\n",
     "model = lgr()\n",
@@ -214,12 +230,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   area_worst  concave.points_mean  concave.points_worst  perimeter_worst  \\\n",
+      "0       630.5             0.031100               0.07283            96.09   \n",
+      "1       314.9             0.020760               0.06227            65.13   \n",
+      "2       545.9             0.029230               0.05013            84.46   \n",
+      "3       242.2             0.005917               0.02564            57.26   \n",
+      "4       582.6             0.027490               0.06548            89.88   \n",
+      "\n",
+      "   radius_worst  \n",
+      "0        14.500  \n",
+      "1        10.230  \n",
+      "2        13.300  \n",
+      "3         8.964  \n",
+      "4        13.760  \n",
+      "   area_worst  concave.points_mean  concave.points_worst  perimeter_worst  \\\n",
+      "0      2019.0              0.14710                0.2654            184.6   \n",
+      "1      1709.0              0.12790                0.2430            152.5   \n",
+      "2      1575.0              0.10430                0.1625            152.2   \n",
+      "3      1606.0              0.07400                0.1932            153.2   \n",
+      "4       897.0              0.05985                0.1556            110.6   \n",
+      "\n",
+      "   radius_worst  \n",
+      "0         25.38  \n",
+      "1         23.57  \n",
+      "2         22.54  \n",
+      "3         22.88  \n",
+      "4         17.06  \n",
+      "  diagnosis  area_worst  concave.points_mean  concave.points_worst  \\\n",
+      "0         M      1956.0              0.07017                0.1860   \n",
+      "1         M       567.7              0.10520                0.2575   \n",
+      "2         M       741.6              0.08089                0.1741   \n",
+      "3         B       711.2              0.04781                0.1288   \n",
+      "4         M      2615.0              0.08632                0.2009   \n",
+      "\n",
+      "   perimeter_worst  radius_worst  \n",
+      "0           158.80         24.99  \n",
+      "1            98.87         14.91  \n",
+      "2           103.40         15.47  \n",
+      "3            99.70         15.11  \n",
+      "4           188.00         29.17  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy\n",
+    "df1 = pd.read_csv(\"mc_data_B.csv\").drop([\"Unnamed: 0\"],axis=1)\n",
+    "print(df1.head(5))\n",
+    "df2 = pd.read_csv(\"mc_data_M.csv\").drop([\"Unnamed: 0\"],axis=1)\n",
+    "print(df2.head(5))\n",
+    "df3 = pd.read_csv(\"mc_test_data.csv\").drop([\"Unnamed: 0\"],axis=1)\n",
+    "print(df3.head(5))"
+   ]
   },
   {
    "cell_type": "code",
